--- a/index.html
+++ b/index.html
@@ -11,7 +11,46 @@
     <header>
         <h1>Il mio viaggio a Londra</h1>
         <img src="assets/image-title-1.jpg" alt="title pictures">
+        <img src="assets/image-title-2.jpg" alt="title pictures">
+        <img src="assets/image-title-3.jpg" alt="title pictures">
         <hr>
     </header>
+    <h2>Le mie spese</h2>
+    <table>
+        <tr>
+            <td> <strong>Numero</strong> </td>
+            <td> <strong>Descrizione</strong> </td>
+            <td> <strong>Costo</strong> </td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+        <tr>
+            <td>Totale</td>
+            <td></td>
+            <td>160€</td>
+        </tr>
+    </table>
+    <hr>
+    <h2>Cose da fare</h2>
+    <ul>
+        <li>Visitare la Tower of London</li>
+        <li>Visitare greenwich</li>
+        <li>Ascoltare un artista di strada a Covent Garden</li>
+        <li>Mangiare il tipico Fish and Chips inglese</li>
+    </ul>
+    <hr>
 </body>
 </html>
