--- a/index.html
+++ b/index.html
@@ -52,5 +52,29 @@
         <li>Mangiare il tipico Fish and Chips inglese</li>
     </ul>
     <hr>
+    <h2>Info utili:</h2>
+    <ol>
+        <li>Numeri utili di emergenza</li>
+        <ul>
+            <li> <strong>999</strong>  - Emergenza</li>
+            <li> <strong>101</strong> - Numero polizia</li>
+            <li> <strong>111</strong> - Numero assistenza medica</li>
+        </ul>
+    </ol>
+    <ol>
+        <li>Hotel</li>
+        <ul>
+            <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+            <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
+        </ul>
+    </ol>
+    <ol>
+        <li>Aereo</li>
+        <ul>
+            <li><strong>Volo di Andata</strong>:Y1234X, ore 9.30 da Milano Malpensa</li>
+            <li><strong>Volo di Ritorno</strong>:Y1236X. ore 18.30 da London Heathrow</li>
+        </ul>
+    </ol>
+    <hr>
 </body>
 </html>
