add footer and prettify the code

--- a/index.html
+++ b/index.html
@@ -1,80 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>London Trip</title>
+    </head>
 
-<body>
-    <header>
-        <h1>Il mio viaggio a Londra</h1>
-        <img src="assets/image-title-1.jpg" alt="title pictures">
-        <img src="assets/image-title-2.jpg" alt="title pictures">
-        <img src="assets/image-title-3.jpg" alt="title pictures">
+    <body>
+        <!-- Inizio header -->
+        <header>
+            <h1>Il mio viaggio a Londra</h1>
+            <img src="assets/image-title-1.jpg" alt="title pictures">
+            <img src="assets/image-title-2.jpg" alt="title pictures">
+            <img src="assets/image-title-3.jpg" alt="title pictures">
+            <hr>
+        </header>
+        <!-- Fine header -->
+        <h2>Le mie spese</h2>
+        <!-- Inizio tabella -->
+        <table>
+            <tr>
+                <td><strong>Numero</strong> </td>
+                <td><strong>Descrizione</strong> </td>
+                <td><strong>Costo</strong> </td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120€</td>
+            </tr>
+            <tr>
+                <td>Totale</td>
+                <td></td>
+                <td>160€</td>
+            </tr>
+        </table>
+        <!-- Fine tabella -->
         <hr>
-    </header>
-    <h2>Le mie spese</h2>
-    <table>
-        <tr>
-            <td> <strong>Numero</strong> </td>
-            <td> <strong>Descrizione</strong> </td>
-            <td> <strong>Costo</strong> </td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Biglietto Aereo</td>
-            <td>120€</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Biglietto Aereo</td>
-            <td>120€</td>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Biglietto Aereo</td>
-            <td>120€</td>
-        </tr>
-        <tr>
-            <td>Totale</td>
-            <td></td>
-            <td>160€</td>
-        </tr>
-    </table>
-    <hr>
-    <h2>Cose da fare</h2>
-    <ul>
-        <li>Visitare la Tower of London</li>
-        <li>Visitare greenwich</li>
-        <li>Ascoltare un artista di strada a Covent Garden</li>
-        <li>Mangiare il tipico Fish and Chips inglese</li>
-    </ul>
-    <hr>
-    <h2>Info utili:</h2>
-    <ol>
-        <li>Numeri utili di emergenza</li>
+        <h2>Cose da fare</h2>
+        <!-- Inizio lista 1 -->
         <ul>
-            <li> <strong>999</strong>  - Emergenza</li>
-            <li> <strong>101</strong> - Numero polizia</li>
-            <li> <strong>111</strong> - Numero assistenza medica</li>
+            <li>Visitare la Tower of London ✘</li>
+            <li>Visitare greenwich ✔</li>
+            <li>Ascoltare un artista di strada a Covent Garden ✔</li>
+            <li>Mangiare il tipico Fish and Chips inglese ✘</li>
         </ul>
-    </ol>
-    <ol>
-        <li>Hotel</li>
-        <ul>
-            <li><strong>Nome hotel</strong>: Buckingham Palace</li>
-            <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
-        </ul>
-    </ol>
-    <ol>
-        <li>Aereo</li>
-        <ul>
-            <li><strong>Volo di Andata</strong>:Y1234X, ore 9.30 da Milano Malpensa</li>
-            <li><strong>Volo di Ritorno</strong>:Y1236X. ore 18.30 da London Heathrow</li>
-        </ul>
-    </ol>
-    <hr>
-</body>
+        <!-- Fine lista 1 -->
+        <hr>
+        <h2>Info utili:</h2>
+        <!-- Inizio lista 2 -->
+        <ol>
+            <li>Numeri utili di emergenza</li>
+            <ul>
+                <li><strong>999</strong> - Emergenza</li>
+                <li><strong>101</strong> - Numero polizia</li>
+                <li><strong>111</strong> - Numero assistenza medica</li>
+            </ul>
+        </ol>
+        <ol>
+            <li>Hotel</li>
+            <ul>
+                <li><strong>Nome hotel</strong>: Buckingham Palace</li>
+                <li><strong>Indirizzo hotel</strong>: Westminister, London SW1A 1AA, Regno Unito</li>
+            </ul>
+        </ol>
+        <ol>
+            <li>Aereo</li>
+            <ul>
+                <li><strong>Volo di Andata</strong>:Y1234X, ore 9.30 da Milano Malpensa</li>
+                <li><strong>Volo di Ritorno</strong>:Y1236X. ore 18.30 da London Heathrow</li>
+            </ul>
+        </ol>
+        <!-- Fine lista 2 -->
+        <hr>
+         <!-- Inizio footer -->
+        <footer>
+            <h2>Le foto</h2>
+            <img src="assets/image-end-1.jpg" alt="end pictures">
+            <img src="assets/image-end-2.png" alt="end pictures">
+        </footer>
+        <!-- Fine footer -->
+    </body>
 </html>
